Last few things

--- a/0_Introduction.ipynb
+++ b/0_Introduction.ipynb
@@ -1140,17 +1140,10 @@
     "\n",
     "## So that's how you grab data\n",
     "\n",
-    "There's a _lot_ more to, for example, SQL querying or parsing HTTP responses, but those are the basics of how to get things into a `pandas` dataframe. Now, let's take a look at [cleaning and exploring the data](1_EDA.ipynb)!"
+    "There's a _lot_ more to, for example, SQL querying or parsing HTTP responses, but those are the basics of how to get things into a `pandas` dataframe. Now, let's take a look at [cleaning and exploring the data](1_EDA.ipynb)!\n",
+    "\n",
+    "# Next: [Exploring data $\\rightarrow$](1_EDA.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
