--- a/2_StatsML.ipynb
+++ b/2_StatsML.ipynb
@@ -1208,11 +1208,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# That's it! But here's some [extra stuff $\\rightarrow$](3_Etc.ipynb)"
+   ]
   }
  ],
  "metadata": {
