--- a/0_Introduction.ipynb
+++ b/0_Introduction.ipynb
@@ -279,7 +279,7 @@
     "2. a query in some dialect of SQL (e.g. `SELECT * FROM SOME_TABLE`)\n",
     "3. a way to connect Python to the database!\n",
     "\n",
-    "We won't cover (1) and (2) today (though I'll include some learning materials in TODO), but there are lots of ways to do (3). I use the [`sqlalchemy`](https://www.sqlalchemy.org/) library. But there are others ([lots](https://pypi.python.org/pypi?:action=search&term=sql)!), and many offer the same basic functionality - tomayto, tomahto.\n",
+    "We won't cover (1) and (2) today (though I'll include some learning materials in [3_Etc.ipynb](3_Etc.ipynb)), but there are lots of ways to do (3). I use the [`sqlalchemy`](https://www.sqlalchemy.org/) library. But there are others ([lots](https://pypi.python.org/pypi?:action=search&term=sql)!), and many offer the same basic functionality - tomayto, tomahto.\n",
     "\n",
     "#### Local vs. remote database\n",
     "\n",
